<?xml version="1.0" encoding="utf-8"?>


<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_category_look_and_feel">

        <ListPreference
            android:title="@string/pref_app_theme_title"
            android:summary="@string/pref_app_theme_summary"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:defaultValue="dark"
            android:key="THEME" />

        <Preference
            android:title="@string/pref_color_scheme_title"
            android:summary="@string/pref_color_scheme_summary"
            android:key="COLOR_SCHEME" />

        <SwitchPreference
            android:title="@string/pref_fullscreen_title"
            android:summary="@string/pref_fullscreen_summary"
            android:defaultValue="false"
            android:key="FULLSCREEN_MODE" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_other">

        <SwitchPreference
            android:title="@string/pref_confirm_exit_title"
            android:summary="@string/pref_confirm_exit_summary"
            android:defaultValue="true"
            android:key="CONFIRM_EXIT" />

    </PreferenceCategory>

</PreferenceScreen>