<?xml version="1.0" encoding="utf-8"?>


<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_graph"
    app:startDestination="@id/headerListFragment">

    <fragment
        android:id="@+id/headerListFragment"
        android:name="com.kira.ui.feature.settings.ui.fragment.HeaderListFragment"
        android:label="@string/label_settings"
        tools:layout="@layout/fragment_header_list">
        <deepLink app:uri="kiralearning://settings" />
        <action
            android:id="@+id/to_applicationFragment"
            app:destination="@id/applicationFragment" />
        <action
            android:id="@+id/to_editorFragment"
            app:destination="@id/editorFragment" />
        <action
            android:id="@+id/to_codeStyleFragment"
            app:destination="@id/codeStyleFragment" />
        <action
            android:id="@+id/to_filesFragment"
            app:destination="@id/filesFragment" />
        <action
            android:id="@+id/to_aboutFragment"
            app:destination="@id/aboutFragment" />
    </fragment>

    <fragment
        android:id="@+id/applicationFragment"
        android:name="com.kira.ui.feature.settings.ui.fragment.ApplicationFragment"
        android:label="@string/pref_header_application_title"
        tools:layout="@layout/layout_preference">
        <deepLink app:uri="kiralearning://settings/application" />
    </fragment>

    <fragment
        android:id="@+id/editorFragment"
        android:name="com.kira.ui.feature.settings.ui.fragment.EditorFragment"
        android:label="@string/pref_header_editor_title"
        tools:layout="@layout/layout_preference">
        <deepLink app:uri="kiralearning://settings/editor" />
    </fragment>

    <fragment
        android:id="@+id/codeStyleFragment"
        android:name="com.kira.ui.feature.settings.ui.fragment.CodeStyleFragment"
        android:label="@string/pref_header_codeStyle_title"
        tools:layout="@layout/layout_preference">
        <deepLink app:uri="kiralearning://settings/codestyle" />
    </fragment>

    <fragment
        android:id="@+id/filesFragment"
        android:name="com.kira.ui.feature.settings.ui.fragment.FilesFragment"
        android:label="@string/pref_header_files_title"
        tools:layout="@layout/layout_preference">
        <deepLink app:uri="kiralearning://settings/files" />
    </fragment>

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.kira.ui.feature.settings.ui.fragment.AboutFragment"
        android:label="@string/pref_header_about_title"
        tools:layout="@layout/layout_preference">
        <deepLink app:uri="kiralearning://settings/about" />
    </fragment>

</navigation>